Add 2/3 of percentiles generate data pipeline

--- a/Trying_Improve.ipynb
+++ b/Trying_Improve.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Import libraries\n",
@@ -19,8 +17,8 @@
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.metrics import mean_squared_error\n",
     "\n",
-    "import xgboost as xgb\n",
-    "import catboost as cb\n",
+    "#import xgboost as xgb\n",
+    "#import catboost as cb\n",
     "\n",
     "import datetime\n",
     "\n",
@@ -7131,6 +7129,175 @@
    "source": [
     "## Let's add 25 and 75 percentiles of price and delete mean item count"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# New function to construct base dataframes for train, validation and test\n",
+    "def construct_base_datasets_add_std_mean_perc_1(months=NMONTHS, verbose=True):\n",
+    "    \"\"\"\n",
+    "    months - number of last months to construct base train/test matrix dataset\n",
+    "    verbose - if True, function print logs of it's operations\n",
+    "    This function construct grouped by months sales information for train, validation and test\n",
+    "    \"\"\"\n",
+    "    def perc25(col):\n",
+    "        return np.percentile(col, q=25)\n",
+    "    \n",
+    "    def perc75(col):\n",
+    "        return np.percentile(col, q=75)\n",
+    "    \n",
+    "    # Group transactions by month, shop and item (add stds and price mean here)\n",
+    "    if verbose:\n",
+    "        print(str(datetime.datetime.now()) + ': start aggregating')\n",
+    "    \n",
+    "    agg_func = {'item_cnt_day': ['sum', 'std'],# 'mean'], \n",
+    "                 'item_price': ['mean', 'std', perc25, perc75]}\n",
+    "    grp_trans = transactions.groupby(['date_block_num', 'shop_id', 'item_id'], as_index=False).agg(agg_func)\n",
+    "    # Rename columns\n",
+    "    grp_trans.columns = ['date_block_num', 'shop_id', 'item_id', 'item_cnt_day_sum', 'item_cnt_day_std', \n",
+    "                         #'item_cnt_day_mean', \n",
+    "                         'item_price_mean', 'item_price_std', \n",
+    "                         'item_price_perc25', 'item_price_perc75']\n",
+    "    \n",
+    "    # Split dataset by months\n",
+    "    if verbose:\n",
+    "        print(str(datetime.datetime.now()) + '. construct_base_datasets_add_std_and_perc: start splitting by months')\n",
+    "    \n",
+    "    lst_grp_trans = []\n",
+    "    max_month = grp_trans.date_block_num.max() + 1\n",
+    "    for month in range(max_month-months-2, max_month): # Get only last NMONTHS months data\n",
+    "        month_df = grp_trans[grp_trans.date_block_num == month]\n",
+    "        # Rename target column and price column\n",
+    "        month_df.rename(index=str, columns={'item_cnt_day_sum': 'item_cnt_day_sum_' + str(month),\n",
+    "                                            'item_cnt_day_std': 'item_cnt_day_std_' + str(month),\n",
+    "                                            #'item_cnt_day_mean': 'item_cnt_day_mean_' + str(month),\n",
+    "                                            'item_price_mean': 'item_price_mean_' + str(month),\n",
+    "                                            'item_price_std': 'item_price_std_' + str(month),\n",
+    "                                            'item_price_perc25': 'item_price_perc25_' + str(month),\n",
+    "                                            'item_price_perc75': 'item_price_perc75' + str(month)\n",
+    "                                           }, inplace=True) \n",
+    "        lst_grp_trans.append(month_df)\n",
+    "        \n",
+    "    # Join data with test dataset\n",
+    "    if verbose:\n",
+    "        print(str(datetime.datetime.now()) + '. construct_base_datasets_add_std_and_perc: start joining with test data')\n",
+    "    \n",
+    "    all_data = test[['shop_id', 'item_id']].set_index(['shop_id', 'item_id'])\n",
+    "    for month in range(max_month-months-2, max_month): # [8..34)\n",
+    "        all_data = all_data.join(lst_grp_trans[month+months-max_month+2][['shop_id', 'item_id', \n",
+    "                                                                          'item_cnt_day_sum_' + str(month),\n",
+    "                                                                          'item_cnt_day_std_' + str(month),\n",
+    "                                                                          #'item_cnt_day_mean_' + str(month),\n",
+    "                                                                          'item_price_mean_' + str(month),\n",
+    "                                                                          'item_price_std_' + str(month),\n",
+    "                                                                          'item_price_perc25_' + str(month),\n",
+    "                                                                          'item_price_perc75' + str(month)\n",
+    "                                                                         ]].set_index(['shop_id', 'item_id']))\n",
+    "\n",
+    "    # Delete unused dataframes\n",
+    "    del grp_trans, lst_grp_trans\n",
+    "    gc.collect()\n",
+    "    \n",
+    "    # Replace NaNs by 0\n",
+    "    all_data.fillna(0, inplace=True)\n",
+    "    \n",
+    "    # Get train target and validation target column\n",
+    "    if verbose:\n",
+    "        print(str(datetime.datetime.now()) + '. construct_base_datasets_add_std_and_perc: start calculating x_train, ' +\n",
+    "              'x_val, x_test, train_target, val_target')\n",
+    "    \n",
+    "    #val_target = all_data.item_cnt_day_sum_33\n",
+    "    train_target = all_data.item_cnt_day_sum_32\n",
+    "    \n",
+    "    # Calculate x_train, x_val, x_test\n",
+    "    x_train = all_data.copy()\n",
+    "    x_train.drop(['item_cnt_day_sum_32', 'item_cnt_day_std_32', #'item_cnt_day_mean_32',\n",
+    "                  'item_price_mean_32', 'item_price_std_32', 'item_price_perc25_32', 'item_price_perc75_32'\n",
+    "                  'item_cnt_day_sum_33', 'item_cnt_day_std_33', #'item_cnt_day_mean_33',\n",
+    "                  'item_price_mean_33', 'item_price_std_33', 'item_price_perc25_33', 'item_price_perc75_33'\n",
+    "                 ], axis=1, inplace=True)\n",
+    "    \n",
+    "    first_col = str(max_month-months-2)\n",
+    "    '''\n",
+    "    x_val = all_data.copy()\n",
+    "    x_val.drop(['item_cnt_day_sum_' + first_col, 'item_cnt_day_std_' + first_col, 'item_cnt_day_mean_' + first_col,\n",
+    "                'item_price_mean_' + first_col, 'item_price_std_' + first_col,\n",
+    "                'item_cnt_day_sum_33', 'item_cnt_day_std_33', 'item_cnt_day_mean_33',\n",
+    "                'item_price_mean_33', 'item_price_std_33',\n",
+    "               ], axis=1, inplace=True)\n",
+    "    '''\n",
+    "    \n",
+    "    x_test = all_data.copy()\n",
+    "    second_col = str(max_month-months-1)\n",
+    "    x_test.drop(['item_cnt_day_sum_' + first_col, 'item_cnt_day_std_' + first_col, #'item_cnt_day_mean_' + first_col,\n",
+    "                 'item_price_mean_' + first_col, 'item_price_std_' + first_col, \n",
+    "                 'item_price_perc25_' + first_col, 'item_price_perc75_' + first_col,\n",
+    "                 'item_cnt_day_sum_' + second_col, 'item_cnt_day_std_' + second_col,\n",
+    "                 'item_price_mean_' + second_col, 'item_price_std_' + second_col, #'item_cnt_day_mean_' + second_col,\n",
+    "                 'item_price_perc25_' + second_col, 'item_price_perc75_' + second_col\n",
+    "                ], axis=1, inplace=True)\n",
+    "    \n",
+    "    #return x_train, x_val, x_test, train_target, val_target\n",
+    "    return x_train, x_test, train_target"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_means_with_std_mean_perc(df, months=NMONTHS):\n",
+    "    \"\"\"\n",
+    "    df - dataframe with the data\n",
+    "    This function add sliding means by last n column values (last n months)\n",
+    "    \"\"\"\n",
+    "    # Define filters for price and item count features separation\n",
+    "    df_fltr_item_cnt_sum_col = [col for col in df if col.startswith('item_cnt_day_sum')]\n",
+    "    df_fltr_item_cnt_std_col = [col for col in df if col.startswith('item_cnt_day_std')]\n",
+    "    df_fltr_price_mean_col = [col for col in df if col.startswith('item_price_mean')]\n",
+    "    df_fltr_price_std_col = [col for col in df if col.startswith('item_price_std')]\n",
+    "    df_fltr_price_perc25_col = [col for col in df if col.startswith('item_price_perc25')]\n",
+    "    df_fltr_price_perc75_col = [col for col in df if col.startswith('item_price_perc75')]\n",
+    "    \n",
+    "    \n",
+    "    # Get separate dataframes by this filters\n",
+    "    df_item_cnt_sum_df = df[df_fltr_item_cnt_sum_col]\n",
+    "    df_item_cnt_std_df = df[df_fltr_item_cnt_std_col]\n",
+    "    df_price_mean_df = df[df_fltr_price_mean_col]\n",
+    "    df_price_std_df = df[df_fltr_price_std_col]\n",
+    "    df_price_perc25_df = df[df_fltr_price_perc25_col]\n",
+    "    df_price_perc75_df = df[df_fltr_price_perc75_col]\n",
+    "    \n",
+    "    \n",
+    "    # Convert dataframes to NumPy format\n",
+    "    np_df_sum_count = np.array(df_item_cnt_sum_df)\n",
+    "    np_df_std_count = np.array(df_item_cnt_std_df)\n",
+    "    np_df_mean_price = np.array(df_price_mean_df)\n",
+    "    np_df_std_price = np.array(df_price_std_df)\n",
+    "    np_df_perc25_count = np.array(df_price_perc25_df)\n",
+    "    np_df_perc75_count = np.array(df_price_perc75_df)\n",
+    "    \n",
+    "    \n",
+    "    # Clean data\n",
+    "    del df_item_cnt_sum_df, df_item_cnt_std_df, df_price_perc25_df, df_price_perc75_df\n",
+    "    del df_price_mean_df, df_price_std_df\n",
+    "    gc.collect()\n",
+    "    \n",
+    "    # Add features to df\n",
+    "    for i in range(1, months+1):\n",
+    "        df['mean_cnt_sum_' + str(i)] = pd.Series(np_df_sum_count[:, -i:].mean(axis=1), index=df.index)\n",
+    "        df['mean_cnt_std_' + str(i)] = pd.Series(np_df_std_count[:, -i:].mean(axis=1), index=df.index)\n",
+    "        df['mean_price_mean_' + str(i)] = pd.Series(np_df_mean_price[:, -i:].mean(axis=1), index=df.index)\n",
+    "        df['mean_price_std_' + str(i)] = pd.Series(np_df_std_price[:, -i:].mean(axis=1), index=df.index)\n",
+    "        df['mean_price_perc25_' + str(i)] = pd.Series(np_df_perc25_count[:, -i:].mean(axis=1), index=df.index)\n",
+    "        df['mean_price_perc75_' + str(i)] = pd.Series(np_df_perc75_count[:, -i:].mean(axis=1), index=df.index)\n",
+    "        \n",
+    "    return df"
+   ]
   }
  ],
  "metadata": {
@@ -7149,7 +7316,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
